# 340b-optimizer-v2

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/sample/: Mfr_CP_Restrictions_Lookup_FQHC.xlsx  NDC_HCPCS_MAPPING_README.md  Ravenswood_AWP_Reimbursement_Matrix.xlsx  asp_pricing.csv  biologics_logic_grid.xlsx  cms_crosswalk_reference.csv  ira_drug_list.csv  ndc_hcpcs_mapping.csv  noc_crosswalk.csv  noc_pricing.csv  product_catalog.xlsx
src/optimizer_340b/: __init__.py  config.py  models.py
src/optimizer_340b/compute/: __init__.py  dosing.py  margins.py  retail_pricing.py
src/optimizer_340b/ingest/: __init__.py  loaders.py  normalizers.py  validators.py
src/optimizer_340b/risk/: __init__.py  ira_flags.py  manufacturer_cp.py  penny_pricing.py  retail_validation.py
src/optimizer_340b/ui/: __init__.py  app.py
src/optimizer_340b/ui/components/: __init__.py  capture_slider.py  drug_search.py  margin_card.py  risk_badge.py
src/optimizer_340b/ui/pages/: __init__.py  dashboard.py  drug_detail.py  manual_upload.py  ndc_lookup.py  upload.py
tests/: conftest.py  test_config.py  test_dosing.py  test_integration.py  test_loaders.py  test_margins.py  test_models.py  test_normalizers.py  test_risk_flags.py  test_validators.py
